feat(reactagent): 技能仓库接入 MySQL，重构工具注册与工作区配置并新增 amap MCP 天气工具